--- a/ForeScore.WebMVC/Views/Post/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Index.cshtml
@@ -4,17 +4,22 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Post Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "SelectRound")
-</p>
 <div class="container">
+    <h2>Post Index</h2>
+    <br />
+    <div class="row">
+        <div class="col-lg-12">
+            <a href="/Post/SelectRound" class="btn btn-success btn-block">
+                Create New Post
+            </a>
+        </div>
+    </div>
+    <br />
     <div class="row">
 
         <div class="col-lg-6">
             <div class="panel panel-primary">
-                <div class="panel-heading">Your Feed</div>
+                <div class="panel-heading">Your Posts</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
                         <thead>
@@ -56,11 +61,11 @@
                         <tbody>
                             @for (int i = 0; i < Model.MyPosts.Count; i++)
                             {
-                            <tr>
-                                <td>@Html.DisplayFor(model => model.MyPosts[i].Title)</td>
-                                <td>@Html.DisplayFor(model => model.MyPosts[i].Content)</td>
-                                <td>@Html.ActionLink("Manage Post", "Details", new { id = Model.MyPosts[i].PostId }) |</td>
-                            </tr>
+                                <tr>
+                                    <td>@Html.DisplayFor(model => model.MyPosts[i].Title)</td>
+                                    <td>@Html.DisplayFor(model => model.MyPosts[i].Content)</td>
+                                    <td>@Html.ActionLink("Manage Post", "Details", new { id = Model.MyPosts[i].PostId }) |</td>
+                                </tr>
                             }
                         </tbody>
                     </table>
