--- a/ForeScore.WebMVC/Views/Post/SelectRound.cshtml
+++ b/ForeScore.WebMVC/Views/Post/SelectRound.cshtml
@@ -9,85 +9,101 @@
 
     <h2>Select A Round To Post</h2>
     <br />
-    <div class="row col-lg-12">
-        <div class="col-lg-5">
+
+    <div class="row">
+
+
+        <div class="col-lg-3">
+            <a href="@Url.Action("Index", "Post")"
+               class="btn btn-block btn-info">
+                Post Index
+            </a>
+        </div>
+
+        <div class="col-lg-1"></div>
+
+        <div class="col-lg-3">
             <a href="@Url.Action("Index", "Round")"
-               id="sample_editable_1_new"
-               class="btn btn-block btn-info col-lg-2">
+               class="btn btn-block btn-warning">
                 Round Index
             </a>
         </div>
-        <div class="col-lg-2"></div>
-        <div class="col-lg-5">
+
+        <div class="col-lg-1"></div>
+
+        <div class="col-lg-3">
             <a href="@Url.Action("CreatePost", "Post", new { id = Model.NullRound })"
-               id="sample_editable_1_new"
-               class="btn btn-block btn-success col-lg-2">
+               class="btn btn-block btn-success">
                 Create A Post Without A Round
             </a>
         </div>
+
     </div>
-</div>
-<br />
+    <br />
+    <h5 id="postselect">Your Round Must Be Set To "Is Public", In Order To Be Able To Post It.</h5>
+    <br />
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Your Public Rounds</div>
+                <div class="panel-body panel-default ">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="row">
+                                    Course Name
+                                </th>
+                                <th scope="row">
+                                    Description
+                                </th>
+                                <th scope="row">
+                                    Score
+                                </th>
+                                <th scope="row">
+                                    Is Public
+                                </th>
+                                <th scope="row">
+                                    Is Featured
+                                </th>
+                                <th scope="row">
+                                    Date of Round
+                                </th>
+                                <th scope="row"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Rounds)
+                            {
+                                <tr>
+                                    <td scope="row">
+                                        @Html.DisplayFor(modelItem => item.CourseName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Description)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Score)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.IsPublic)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.IsFeatured)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.DateOfRound)
+                                    </td>
 
-
-<div class="row col-lg-12">
-    <div class="panel panel-default">
-        <div class="panel-body panel-default ">
-            <table class="table table-bordered table-striped">
-                <thead>
-                    <tr>
-                        <th scope="row">
-                            Course Name
-                        </th>
-                        <th scope="row">
-                            Description
-                        </th>
-                        <th scope="row">
-                            Score
-                        </th>
-                        <th scope="row">
-                            Is Public
-                        </th>
-                        <th scope="row">
-                            Is Featured
-                        </th>
-                        <th scope="row">
-                            Date of Round
-                        </th>
-                        <th scope="row"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model.Rounds)
-                    {
-                        <tr>
-                            <td scope="row">
-                                @Html.DisplayFor(modelItem => item.CourseName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Description)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Score)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.IsPublic)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.IsFeatured)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DateOfRound)
-                            </td>
-
-                            <td>
-                                @Html.ActionLink("Post This Round", "CreatePost", new { id = item.RoundId })
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
+                                    <td>
+                                        @Html.ActionLink("Post This Round", "CreatePost", new { id = item.RoundId })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-</div>
+
