--- a/ForeScore.WebMVC/Views/Follow/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Index.cshtml
@@ -46,7 +46,7 @@
 
 
         <div class="col-lg-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Your Followers</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
