--- a/ForeScore.WebMVC/Views/Post/CreatePost.cshtml
+++ b/ForeScore.WebMVC/Views/Post/CreatePost.cshtml
@@ -4,15 +4,13 @@
     ViewBag.Title = "CreatePost";
 }
 
-<h2>CreatePost</h2>
-
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <div class="container">
 
-        <h4>PostCreate</h4>
+        <h2>Create Post</h2>
         <br />
 
         <div class="row">
@@ -36,13 +34,13 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-info">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Post Information</div>
                     <div class="panel-body form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.TextBoxFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -50,10 +48,20 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.TextBoxFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
                             </div>
                         </div>
+
+                        @if (Model.RoundId != null)
+                        {
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.RoundDetail.Score, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.DisplayFor(model => model.RoundDetail.Score, new { htmlAttributes = new { @class = "form-control" } })
+                                </div>
+                            </div>
+                        }
 
                     </div>
                 </div>
@@ -66,7 +74,7 @@
         {
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="panel panel-info">
+                    <div class="panel panel-primary">
                         <div class="panel-heading">Course Information</div>
                         <div class="panel-body">
                             <div class="col-lg-6">
