--- a/ForeScore.WebMVC/Views/Post/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Delete.cshtml
@@ -247,11 +247,16 @@
                                         </td>
                                         @for (int i = 0; i < Model.RoundDetail.FrontNine.Count; i++)
                                         {
-
                                             <td>
-                                                @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                                                @if (Model.RoundDetail.FrontNine[i].FairwayHit == true)
+                                                {
+                                                    <span class="green glyphicon glyphicon-ok"></span>
+                                                }
+                                                @if (Model.RoundDetail.FrontNine[i].FairwayHit == false)
+                                                {
+                                                    <span class="red glyphicon glyphicon-remove"></span>
+                                                }
                                             </td>
-
                                         }
                                     </tr>
                                     <tr>
@@ -260,11 +265,16 @@
                                         </td>
                                         @for (int i = 0; i < Model.RoundDetail.FrontNine.Count; i++)
                                         {
-
                                             <td>
-                                                @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                                                @if (Model.RoundDetail.FrontNine[i].Penalty == true)
+                                                {
+                                                    <span class="green glyphicon glyphicon-ok"></span>
+                                                }
+                                                @if (Model.RoundDetail.FrontNine[i].Penalty == false)
+                                                {
+                                                    <span class="red glyphicon glyphicon-remove"></span>
+                                                }
                                             </td>
-
                                         }
                                     </tr>
                                 </tbody>
@@ -366,7 +376,14 @@
                                         @for (int i = 0; i < Model.RoundDetail.BackNine.Count; i++)
                                         {
                                             <td>
-                                                @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                                                @if (Model.RoundDetail.BackNine[i].FairwayHit == true)
+                                                {
+                                                    <span class="green glyphicon glyphicon-ok"></span>
+                                                }
+                                                @if (Model.RoundDetail.BackNine[i].FairwayHit == false)
+                                                {
+                                                    <span class="red glyphicon glyphicon-remove"></span>
+                                                }
                                             </td>
                                         }
                                     </tr>
@@ -377,7 +394,14 @@
                                         @for (int i = 0; i < Model.RoundDetail.BackNine.Count; i++)
                                         {
                                             <td>
-                                                @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                                                @if (Model.RoundDetail.BackNine[i].Penalty == true)
+                                                {
+                                                    <span class="green glyphicon glyphicon-ok"></span>
+                                                }
+                                                @if (Model.RoundDetail.BackNine[i].Penalty == false)
+                                                {
+                                                    <span class="red glyphicon glyphicon-remove"></span>
+                                                }
                                             </td>
                                         }
                                     </tr>
@@ -407,7 +431,7 @@
                                                 @if (comment.OwnerId == Model.OwnerId)
                                                 {
                                                     <td>
-                                                        @Html.ActionLink("Delete Comment", "CommentDelete", new { id = comment.CommentId }) 
+                                                        @Html.ActionLink("Delete Comment", "CommentDelete", new { id = comment.CommentId })
                                                     </td>
                                                 }
                                             </tr>
