--- a/ForeScore.WebMVC/Views/Course/Create.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Create.cshtml
@@ -19,7 +19,7 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <div class="panel panel-success">
+                <div class="panel-success">
                     <div class="panel-heading">Course Information</div>
                     <div class="panel-body form-horizontal">
                         <div class="col-lg-6">
@@ -125,10 +125,10 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-success">
+                <div class="panel-success">
                     <div class="panel-heading">Front Nine</div>
                     <div class="panel-body">
-                        <table class="table table-bordered form-horizontal">
+                        <table class="table table-bordered table-striped form-horizontal">
                             <thead>
                                 <tr>
                                     <th class="hole" scope="col">
@@ -176,10 +176,10 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-success">
+                <div class="panel-success">
                     <div class="panel-heading">Back Nine</div>
                     <div class="panel-body">
-                        <table class="table table-bordered form-horizontal">
+                        <table class="table table-bordered table-striped form-horizontal">
                             <thead>
                                 <tr>
                                     <th class="hole" scope="col">
@@ -231,7 +231,7 @@
             <div class="col-lg-5">
                 <a href="@Url.Action("Index", "Course")"
                    class="btn btn-block btn-info col-lg-2">
-                    Discard Course
+                    Discard Course Create
                 </a>
             </div>
             <div class=" col-lg-2"></div>
