--- a/ForeScore.WebMVC/Views/Course/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Details.cshtml
@@ -39,7 +39,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-primary">
+            <div class="panel-primary">
                 <div class="panel-heading">Course Information</div>
                 <div class="panel-body">
                     <div class="col-lg-6">
@@ -149,10 +149,10 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-primary">
+            <div class="panel-primary">
                 <div class="panel-heading">Front Nine</div>
                 <div class="panel-body">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
                                 <th class="hole" scope="col">
@@ -199,10 +199,10 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-primary">
+            <div class="panel-primary">
                 <div class="panel-heading">Back Nine</div>
                 <div class="panel-body">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
                                 <th class="hole" scope="col">
