--- a/ForeScore.WebMVC/Views/Post/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Details.cshtml
@@ -263,11 +263,16 @@
                                     </td>
                                     @for (int i = 0; i < Model.RoundDetail.FrontNine.Count; i++)
                                     {
-
                                         <td>
-                                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                                            @if (Model.RoundDetail.FrontNine[i].FairwayHit == true)
+                                            {
+                                                <span class="green glyphicon glyphicon-ok"></span>
+                                            }
+                                            @if (Model.RoundDetail.FrontNine[i].FairwayHit == false)
+                                            {
+                                                <span class="red glyphicon glyphicon-remove"></span>
+                                            }
                                         </td>
-
                                     }
                                 </tr>
                                 <tr>
@@ -276,11 +281,16 @@
                                     </td>
                                     @for (int i = 0; i < Model.RoundDetail.FrontNine.Count; i++)
                                     {
-
                                         <td>
-                                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                                            @if (Model.RoundDetail.FrontNine[i].Penalty == true)
+                                            {
+                                                <span class="green glyphicon glyphicon-ok"></span>
+                                            }
+                                            @if (Model.RoundDetail.FrontNine[i].Penalty == false)
+                                            {
+                                                <span class="red glyphicon glyphicon-remove"></span>
+                                            }
                                         </td>
-
                                     }
                                 </tr>
                             </tbody>
@@ -382,7 +392,14 @@
                                     @for (int i = 0; i < Model.RoundDetail.BackNine.Count; i++)
                                     {
                                         <td>
-                                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                                            @if (Model.RoundDetail.BackNine[i].FairwayHit == true)
+                                            {
+                                                <span class="green glyphicon glyphicon-ok"></span>
+                                            }
+                                            @if (Model.RoundDetail.BackNine[i].FairwayHit == false)
+                                            {
+                                                <span class="red glyphicon glyphicon-remove"></span>
+                                            }
                                         </td>
                                     }
                                 </tr>
@@ -393,7 +410,14 @@
                                     @for (int i = 0; i < Model.RoundDetail.BackNine.Count; i++)
                                     {
                                         <td>
-                                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                                            @if (Model.RoundDetail.BackNine[i].Penalty == true)
+                                            {
+                                                <span class="green glyphicon glyphicon-ok"></span>
+                                            }
+                                            @if (Model.RoundDetail.BackNine[i].Penalty == false)
+                                            {
+                                                <span class="red glyphicon glyphicon-remove"></span>
+                                            }
                                         </td>
                                     }
                                 </tr>
