--- a/ForeScore.WebMVC/Views/Round/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div class="container">
     <h2>Round Details</h2>
-
+    @Html.HiddenFor(model => model.RoundId)
     <br />
     <div class="row">
 
@@ -266,11 +266,16 @@
                                 </td>
                                 @for (int i = 0; i < Model.FrontNine.Count; i++)
                                 {
-
                                     <td>
-                                        @Html.DisplayFor(model => Model.FrontNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                                        @if (Model.FrontNine[i].FairwayHit == true)
+                                        {
+                                            <span class="green glyphicon glyphicon-ok"></span>
+                                        }
+                                        @if (Model.FrontNine[i].FairwayHit == false)
+                                        {
+                                            <span class="red glyphicon glyphicon-remove"></span>
+                                        }
                                     </td>
-
                                 }
                             </tr>
                             <tr>
@@ -279,11 +284,16 @@
                                 </td>
                                 @for (int i = 0; i < Model.FrontNine.Count; i++)
                                 {
-
                                     <td>
-                                        @Html.DisplayFor(model => Model.FrontNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                                        @if (Model.FrontNine[i].Penalty == true)
+                                        {
+                                            <span class="green glyphicon glyphicon-ok"></span>
+                                        }
+                                        @if (Model.FrontNine[i].Penalty == false)
+                                        {
+                                            <span class="red glyphicon glyphicon-remove"></span>
+                                        }
                                     </td>
-
                                 }
                             </tr>
                         </tbody>
@@ -385,7 +395,14 @@
                                 @for (int i = 0; i < Model.BackNine.Count; i++)
                                 {
                                     <td>
-                                        @Html.DisplayFor(model => Model.BackNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                                        @if (Model.BackNine[i].FairwayHit == true)
+                                        {
+                                            <span class="green glyphicon glyphicon-ok"></span>
+                                        }
+                                        @if (Model.BackNine[i].FairwayHit == false)
+                                        {
+                                            <span class="red glyphicon glyphicon-remove"></span>
+                                        }
                                     </td>
                                 }
                             </tr>
@@ -396,11 +413,19 @@
                                 @for (int i = 0; i < Model.BackNine.Count; i++)
                                 {
                                     <td>
-                                        @Html.DisplayFor(model => Model.BackNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                                        @if (Model.BackNine[i].Penalty == true)
+                                        {
+                                            <span class="green glyphicon glyphicon-ok"></span>
+                                        }
+                                        @if (Model.BackNine[i].Penalty == false)
+                                        {
+                                            <span class="red glyphicon glyphicon-remove"></span>
+                                        }
                                     </td>
                                 }
                             </tr>
                         </tbody>
+
 
                     </table>
                 </div>
