--- a/ForeScore.WebMVC/Views/Round/Create.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Create.cshtml
@@ -6,18 +6,21 @@
 
 <div class="container">
     <h2>Select A Course To Log A Round</h2>
-    <div class="panel-heading col-lg-3"></div>
-    <div class="panel-heading col-lg-6">
-        <a href="/Round/Index" class="btn btn-primary btn-block">
-            Round Index
-        </a>
+    <br />
+    <div class="row">
+        <div class="col-lg-12">
+            <a href="/Round/Index" class="btn btn-info btn-block">
+                Discard Course Create
+            </a>
+        </div>
     </div>
+    <br />
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading"> Courses</div>
-                <div class="panel-body panel-default">
+                <div class="panel-body panel-primary">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
