--- a/ForeScore.WebMVC/Views/Course/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Delete.cshtml
@@ -4,13 +4,12 @@
     ViewBag.Title = "Delete";
 }
 
-@Html.HiddenFor(model => model.CourseId)
 
 @using (Html.BeginForm())
 {
-
-
     @Html.AntiForgeryToken()
+
+    @Html.HiddenFor(model => model.CourseId)
     <div class="container">
         <h2>Delete Course</h2>
 
@@ -35,9 +34,9 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel-danger">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Course Information</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <div class="col-lg-6">
                             <dl class="dl-horizontal">
 
@@ -144,9 +143,9 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel-danger">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Front Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -194,9 +193,9 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel-danger">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Back Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
