--- a/ForeScore.WebMVC/Views/Course/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Details.cshtml
@@ -39,9 +39,9 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel-primary">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Course Information</div>
-                <div class="panel-body">
+                <div class="panel-body panel-primary">
                     <div class="col-lg-6">
                         <dl class="dl-horizontal">
 
@@ -149,9 +149,9 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel-primary">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Front Nine</div>
-                <div class="panel-body">
+                <div class="panel-body panel-primary">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
@@ -199,9 +199,9 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel-primary">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Back Nine</div>
-                <div class="panel-body">
+                <div class="panel-body panel-primary">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
