--- a/ForeScore.WebMVC/Views/Course/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Edit.cshtml
@@ -4,18 +4,15 @@
     ViewBag.Title = "Edit";
 }
 
-@Html.HiddenFor(model => model.CourseId)
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-
-
     <div class="container">
-        <h2>Add A Course</h2>
+        <h2>Edit Course</h2>
 
         <br />
+        @Html.HiddenFor(model => model.CourseId)
 
         <div class="row">
             <div class="col-lg-5">
@@ -24,21 +21,23 @@
                     Discard Course Edit
                 </a>
             </div>
+
             <div class=" col-lg-2"></div>
             <div class="col-lg-5">
 
                 <button type="submit" value="Save" class="btn btn-block btn-warning col-lg-2">Edit</button>
 
             </div>
+
         </div>
         <br />
 
         <div class="row">
 
             <div class="col-lg-12">
-                <div class="panel-warning">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Course Information</div>
-                    <div class="panel-body form-horizontal">
+                    <div class="panel-body panel-primary form-horizontal">
                         <div class="col-lg-6">
 
                             <div class="form-group">
@@ -142,9 +141,9 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel-warning">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Front Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped form-horizontal">
                             <thead>
                                 <tr>
@@ -194,9 +193,9 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel-warning">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Back Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped form-horizontal">
                             <thead>
                                 <tr>
