--- a/ForeScore.WebMVC/Views/Round/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Details.cshtml
@@ -13,7 +13,7 @@
     <div class="row">
 
         <div class="col-lg-3">
-            <a href="@Url.Action("Index", "Course")"
+            <a href="@Url.Action("Index", "Round")"
                class="btn btn-block btn-info">
                 Round Index
             </a>
@@ -53,7 +53,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">Course Information</div>
-                <div class="panel-body">
+                <div class="panel-body panel-primary">
                     <div class="col-lg-6">
                         <dl class="dl-horizontal">
 
@@ -137,7 +137,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">Round Information</div>
-                <div class="panel-body form-horizontal">
+                <div class="panel-body panel-primary form-horizontal">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -148,14 +148,28 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.IsPublic, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DisplayFor(model => model.IsPublic, new { htmlAttributes = new { @class = "form-control" } })
+                            @if (Model.IsPublic == true)
+                            {
+                                <span class="green glyphicon glyphicon-ok"></span>
+                            }
+                            @if (Model.IsPublic == false)
+                            {
+                                <span class="red glyphicon glyphicon-remove"></span>
+                            }
                         </div>
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.IsFeatured, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DisplayFor(model => model.IsFeatured, new { htmlAttributes = new { @class = "form-control" } })
+                            @if (Model.IsFeatured == true)
+                            {
+                                <span class="green glyphicon glyphicon-ok"></span>
+                            }
+                            @if (Model.IsFeatured == false)
+                            {
+                                <span class="red glyphicon glyphicon-remove"></span>
+                            }
                         </div>
                     </div>
 
@@ -178,7 +192,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">Front Nine</div>
-                <div class="panel-body">
+                <div class="panel-body panel-primary">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
@@ -306,7 +320,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">Back Nine</div>
-                <div class="panel-body">
+                <div class="panel-body panel-primary">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
