--- a/ForeScore.WebMVC/Views/Round/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Edit.cshtml
@@ -14,7 +14,7 @@
         <br />
         <div class="row">
             <div class="col-lg-5">
-                <a href="@Url.Action("Details", "Round", Model.RoundId)"
+                <a href="@Url.Action("Details", "Round", new { id = Model.RoundId })"
                    class="btn btn-block btn-info col-lg-2">
                     Discard Round Edit
                 </a>
@@ -34,7 +34,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Course Information</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <div class="col-lg-6">
                             <dl class="dl-horizontal">
 
@@ -116,9 +116,9 @@
         <br />
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-warning">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Round Information</div>
-                    <div class="panel-body form-horizontal">
+                    <div class="panel-body panel-primary form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -130,8 +130,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.IsPublic, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.RadioButtonFor(model => model.IsPublic, true, new { htmlAttributes = new { @class = "true" } })
-                                @Html.RadioButtonFor(model => model.IsPublic, false, new { htmlAttributes = new { @class = "false" } })
+                                @Html.EditorFor(model => model.IsPublic, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.IsPublic, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -139,8 +138,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.IsFeatured, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.RadioButtonFor(model => model.IsFeatured, true, new { htmlAttributes = new { @class = "true" } })
-                                @Html.RadioButtonFor(model => model.IsFeatured, false, new { htmlAttributes = new { @class = "false" } })
+                                @Html.EditorFor(model => model.IsFeatured, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.IsFeatured, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -148,7 +146,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.DateOfRound, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.DateOfRound, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.DateOfRound, new { htmlAttributes = new { @class = "datetimepicker" } })
                                 @Html.ValidationMessageFor(model => model.DateOfRound, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -162,9 +160,9 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-warning">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Front Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -257,7 +255,9 @@
 
                                         <td>
                                             @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, true, new { htmlAttributes = new { @class = "true" } })
+                                            <span class="green glyphicon glyphicon-ok"></span>
                                             @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, false, new { htmlAttributes = new { @class = "false" } })
+                                            <span class="red glyphicon glyphicon-remove"></span>
                                         </td>
 
                                     }
@@ -271,7 +271,9 @@
 
                                         <td>
                                             @Html.RadioButtonFor(model => Model.FrontNine[i].Penalty, true, new { htmlAttributes = new { @class = "true" } })
+                                            <span class="green glyphicon glyphicon-ok"></span>
                                             @Html.RadioButtonFor(model => Model.FrontNine[i].Penalty, false, new { htmlAttributes = new { @class = "false" } })
+                                            <span class="red glyphicon glyphicon-remove"></span>
                                         </td>
 
                                     }
@@ -284,9 +286,9 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-warning">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Back Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -378,7 +380,9 @@
                                     {
                                         <td>
                                             @Html.RadioButtonFor(model => Model.BackNine[i].FairwayHit, true, new { htmlAttributes = new { @class = "true" } })
+                                            <span class="green glyphicon glyphicon-ok"></span>
                                             @Html.RadioButtonFor(model => Model.BackNine[i].FairwayHit, false, new { htmlAttributes = new { @class = "false" } })
+                                            <span class="red glyphicon glyphicon-remove"></span>
                                         </td>
                                     }
                                 </tr>
@@ -390,7 +394,9 @@
                                     {
                                         <td>
                                             @Html.RadioButtonFor(model => Model.BackNine[i].Penalty, true, new { htmlAttributes = new { @class = "true" } })
+                                            <span class="green glyphicon glyphicon-ok"></span>
                                             @Html.RadioButtonFor(model => Model.BackNine[i].Penalty, false, new { htmlAttributes = new { @class = "false" } })
+                                            <span class="red glyphicon glyphicon-remove"></span>
                                         </td>
                                     }
                                 </tr>
@@ -402,4 +408,27 @@
             </div>
         </div>
     </div>
+}
+
+
+<link href="~/Content/jquery-ui-timepicker-addon.css" rel="stylesheet" />
+
+@section scripts {
+    <script src="~/Scripts/jquery-ui-1.13.0.min.js"></script>
+    <script src="~/Scripts/jquery-ui-timepicker-addon.js"></script>
+    <script src="~/Scripts/jquery-ui-timepicker-addon.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="//code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.6.1/jquery-ui-sliderAccess.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.6.1/jquery-ui-timepicker-addon.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.6.1/jquery-ui-timepicker-addon.js"></script>
+
+    <script>
+
+        $(function () {
+            $(".datetimepicker").datetimepicker();
+        });
+    </script>
+
 }
