--- a/ForeScore.WebMVC/Views/Round/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Index.cshtml
@@ -22,7 +22,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">Courses</div>
-                <div class="panel-body">
+                <div class="panel-body panel-primary">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
