--- a/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
+++ b/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
@@ -19,7 +19,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Course Information</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <div class="col-lg-6">
                             <dl class="dl-horizontal">
 
@@ -101,9 +101,9 @@
         <br />
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-success">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Round Information</div>
-                    <div class="panel-body form-horizontal">
+                    <div class="panel-body panel-primary form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -115,8 +115,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.IsPublic, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.RadioButtonFor(model => model.IsPublic, true, new { htmlAttributes = new { @class = "true" } })
-                                @Html.RadioButtonFor(model => model.IsPublic, false, new { htmlAttributes = new { @class = "false" } })
+                                @Html.EditorFor(model => model.IsPublic, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.IsPublic, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -124,8 +123,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.IsFeatured, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.RadioButtonFor(model => model.IsFeatured, true, new { htmlAttributes = new { @class = "true" } })
-                                @Html.RadioButtonFor(model => model.IsFeatured, false, new { htmlAttributes = new { @class = "false" } })
+                                @Html.EditorFor(model => model.IsFeatured, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.IsFeatured, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -145,9 +143,9 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-success">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Front Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -238,7 +236,9 @@
 
                                         <td>
                                             @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, true, new { htmlAttributes = new { @class = "true" } })
+                                            <span class="green glyphicon glyphicon-ok"></span>
                                             @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, false, new { htmlAttributes = new { @class = "false" } })
+                                            <span class="red glyphicon glyphicon-remove"></span>
                                         </td>
 
                                     }
@@ -252,7 +252,9 @@
 
                                         <td>
                                             @Html.RadioButtonFor(model => Model.FrontNine[i].Penalty, true, new { htmlAttributes = new { @class = "true" } })
+                                            <span class="green glyphicon glyphicon-ok"></span>
                                             @Html.RadioButtonFor(model => Model.FrontNine[i].Penalty, false, new { htmlAttributes = new { @class = "false" } })
+                                            <span class="red glyphicon glyphicon-remove"></span>
                                         </td>
 
                                     }
@@ -265,9 +267,9 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-success">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Back Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -357,7 +359,9 @@
                                     {
                                         <td>
                                             @Html.RadioButtonFor(model => Model.BackNine[i].FairwayHit, true, new { htmlAttributes = new { @class = "true" } })
+                                            <span class="green glyphicon glyphicon-ok"></span>
                                             @Html.RadioButtonFor(model => Model.BackNine[i].FairwayHit, false, new { htmlAttributes = new { @class = "false" } })
+                                            <span class="red glyphicon glyphicon-remove"></span>
                                         </td>
                                     }
                                 </tr>
@@ -369,7 +373,9 @@
                                     {
                                         <td>
                                             @Html.RadioButtonFor(model => Model.BackNine[i].Penalty, true, new { htmlAttributes = new { @class = "true" } })
-                                            @Html.RadioButtonFor(model => Model.BackNine[i].Penalty, false, new { htmlAttributes = new { @class = "false"} })
+                                            <span class="green glyphicon glyphicon-ok"></span>
+                                            @Html.RadioButtonFor(model => Model.BackNine[i].Penalty, false, new { htmlAttributes = new { @class = "false" } })
+                                            <span class="red glyphicon glyphicon-remove"></span>
                                         </td>
                                     }
                                 </tr>
